examples/errors/throw_error.molt
fn load_config(path) = {
  throw(error("config file not found", record { path: path }))
}

load_config("settings.json")
